Emacspeak News --History Of User-Visible Changes
$Id$
Author: T. V. Raman <raman@cs.cornell.edu>

* Emacspeak 18.0 Additions And Changes:

Emacspeak 18.0 provides the following user level enhancements:

* New Emacspeak Features:

** emacspeak-rss.el --Browsing RSS feeds.

Command emacspeak-rss-browse allows you to browse RSS feeds of your
choice.

** voice-setup.el

New voice lock engine.


** emacspeak-desktop.el

Speech-enables the desktop package.


Local variables:
 mode: outline
 paragraph-separate: "[ ]*$"
end: