@@ -12,6 +12,15 @@ Emacspeak 18.0 provides the following user level enhancements:
 
 Command emacspeak-rss-browse allows you to browse RSS feeds of your
 choice.
+** emacspeak-wizards:
+
+Many new productivity wizards.
+
+** Viewing Virtual Consoles:
+
+Wizard emacspeak-wizards-vc-viewer implements a VC viewer for Linux.
+Allows you to view VCs on the Linux console, including the VC that
+Emacspeak itself is running on.
 
 ** voice-setup.el
 
